<resources>
    <string name="app_name">LoginAndRegister</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_greeting">Selamat Datang di FKOM Mobile App</string>
    <string name="text_login">Login</string>
    <string name="text_or_login_with">Or log in with</string>
    <string name="text_login_uppercase">LOGIN</string>
    <string name="text_register_uppercase">REGISTER</string>
    <string name="text_create_account">CREATE ACCOUNT</string>
</resources>