<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/iv_logo_fkom"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_logo_fkom"/>

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/text_greeting"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_fkom" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        android:layout_margin="18dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_login"
                android:fontFamily="@font/poppins_medium"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_or_login_with"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_google_login_1"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:maxWidth="48dp"
                    android:maxHeight="48dp"
                    android:onClick="onGoogleLoginClick"
                    android:src="@drawable/img_google"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageView
                    android:id="@+id/img_twitter_login_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:maxWidth="38dp"
                    android:maxHeight="38dp"
                    android:onClick="onTwitterLoginClick"
                    android:src="@drawable/img_twitter"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <ImageView
                    android:id="@+id/img_apple_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:maxWidth="40dp"
                    android:maxHeight="40dp"
                    android:onClick="onAppleLoginClick"
                    android:src="@drawable/img_apple"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_login_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_login_uppercase"
            android:textSize="18sp"></Button>

        <Button
            android:id="@+id/btn_register_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/text_register_uppercase"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp">

        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>